# cg

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.gradle  gradle.properties  prueba.grp  settings.gradle
bitc/: CMakeLists.txt  bitarray.c  bitarray.h  bitmatrix.c  bitmatrix.h  test.c
bitc_test/: CMakeLists.txt  bitarray_test.c  bitarray_test_big.c  bitc_test.c  bitmatrix_test.c  bitmatrix_test_big.c  main.c
bitcpp/: CMakeLists.txt  bitarray.cpp  bitarray.h  bitmatrix.cpp  bitmatrix.h  test.cpp
bitcpp_test/: CMakeLists.txt  bitcpp_test.cpp
cgc/: build.gradle
cgc/src/main/kotlin/sron/cg/: Main.kt
cgc/src/main/kotlin/sron/cg/compiler/: AST.kt  ASTGenerator.kt  ASTSimplifier.kt  Compiler.kt  Error.kt  JarWriter.kt  Main.kt  Parameters.kt  State.kt  ToAST.kt  Util.kt
cgc/src/main/kotlin/sron/cg/exception/: CompilerException.kt  ErrorsInCodeException.kt  ParsingException.kt
cgplc/: build.gradle
cgplc/src/main/kotlin/sron/cgpl/: Main.kt
cgrt/: build.gradle
compare/: CMakeLists.txt  main.cpp
doc/: CG.docx  CG.odp  LENGUAJE DE PROGRAMACION PARA GRAFOS COMPACTOS.docx  REDIELUZ Poster.ppt  REDIELUZ Poster.pptx  REDIELUZ.docx  Revista.docx  grammar.docx  undone.docx
gradle/wrapper/: gradle-wrapper.properties
grapherc/: CMakeLists.txt  lexer.cpp  lexer.h  test.cpp  token.cpp  token.h
grapherc/src/main/antlr/: Grapher.g4
grapherc/src/main/java/exec/: GL.java  Main.java
grp/: .clang-format  CMakeLists.txt  base.c  base.h  bitarray.c  bitarray.h  bitmatrix.c  bitmatrix.h  file.c  file.h  graph.c  graph.h  grp.c  grp.h  init.c  str.c  str.h
grp-stdlib/: build.gradle
grp/tests/: CMakeLists.txt  base.c  bitarray.c  bitmatrix.c  file.c  graph.c  str.c  warshall.c
grpc/: CMakeLists.txt  ast.c  ast.h  build.gradle  cmd.c  cmd.h  grpc.c  helper.c  helper.h  lexer.l  parser.y  pom.xml
grpc/src/main/antlr/grpc/lib/compiler/internal/: Grp.g4
grpc/src/main/antlr/grpc/lib/internal/: Grp.g4
grpc/src/main/antlr/sron/grpc/compiler/internal/: Grp.g4
grpc/src/main/antlr4/parser/internal/: Grp.g4
grpc/src/main/java/grpc/lib/compiler/: Compiler.java  CompilerPhase.java  GlobalDeclarations.java  Structure.java  TypeChecking.java
grpc/src/main/java/grpc/lib/exception/: CompilerException.java  ParsingException.java
grpc/src/main/java/grpc/lib/result/: UnitResult.java
grpc/src/main/java/grpc/lib/symbol/: Function.java  Location.java  SymTab.java  SymType.java  Symbol.java  Type.java  Variable.java
grpc/src/main/java/grpc/main/: App.java
grpc/src/main/java/main/: GL.java  Main.java
grpc/src/main/java/parser/: Listener.java  Type.java
grpc/src/main/kotlin/grpc/lib/compiler/: CGs.kt  CompilationUnit.kt  Compiler.kt  Gs.kt  UnitResult.kt
grpc/src/main/kotlin/grpc/lib/compiler/internal/: GrpErrorListener.kt
grpc/src/main/kotlin/grpc/lib/compiler/phase/: Globals.kt  Imports.kt  Phase.kt  Structure.kt  Types.kt
grpc/src/main/kotlin/grpc/lib/exception/: CompilerException.kt  ErrorsInCodeException.kt  ParsingException.kt
grpc/src/main/kotlin/grpc/lib/symbol/: CastTable.kt  Function.kt  Location.kt  SymType.kt  Symbol.kt  SymbolTable.kt  Type.kt  Variable.kt
grpc/src/main/kotlin/grpc/lib/util/: LogLevel.kt  Logger.kt
grpc/src/main/kotlin/grpc/main/: Exec.kt
grpc/src/main/kotlin/main/: GL.kt  Main.kt
grpc/src/main/kotlin/parser/: Listener.kt  Type.kt
grpc/src/main/kotlin/sron/grpc/: Main.kt
grpc/src/main/kotlin/sron/grpc/compiler/: Annotation.kt  Compiler.kt  CompilerParameters.kt  Error.kt  JarWriter.kt  Unit.kt  Util.kt
grpc/src/main/kotlin/sron/grpc/compiler/ast/: Arg.kt  FuncDef.kt  Generable.kt  GlExpr.kt  GlVarDec.kt  Init.kt  Stmt.kt  VarDec.kt
grpc/src/main/kotlin/sron/grpc/compiler/internal/: GrpErrorListener.kt
grpc/src/main/kotlin/sron/grpc/compiler/phase/: Generation.kt  Globals.kt  Imports.kt  Phase.kt  PreGeneration.kt  Scoper.kt  StaticCheck.kt  Structure.kt  Types.kt
grpc/src/main/kotlin/sron/grpc/exception/: CompilerException.kt  ErrorsInCodeException.kt  ParsingException.kt
grpc/src/main/kotlin/sron/grpc/symbol/: CastTable.kt  Function.kt  Location.kt  OpTable.kt  SymType.kt  Symbol.kt  SymbolTable.kt  Type.kt  Variable.kt
grpc/src/main/kotlin/sron/grpc/type/: CastTable.kt  IntTypes.kt  OpTable.kt  Type.kt
grpc/src/main/kotlin/sron/grpc/util/: Logger.kt  Unsafe.kt
grpc/src/main/scala/grpc/lib/compiler/: Compiler.scala  CompilerPhase.scala  GlobalDeclarations.scala  StructureCheck.scala  TypeCheck.scala  UnitResult.scala  package.scala
grpc/src/main/scala/grpc/lib/compiler/phase/: Globals.scala  Phase.scala  Structure.scala  Types.scala
grpc/src/main/scala/grpc/lib/exception/: CompilerException.scala  ErrorsInCodeException.scala  FatalCompilationErrorException.scala  ParsingException.scala
grpc/src/main/scala/grpc/lib/symbol/: CastTable.scala  Function.scala  Location.scala  SymType.scala  Symbol.scala  SymbolTable.scala  Type.scala  Variable.scala
grpc/src/main/scala/grpc/lib/util/: Logger.scala
grpc/src/main/scala/grpc/main/: Exec.scala
grpc/src/test/java/: GLTest.java
grpc/src/test/kotlin/sron/grpc/: NumericTypeTest.kt
grpc/src/test/kotlin/sron/grpc/compiler/: IfReturnCheck.kt
grpc/src/test/kotlin/sron/grpc/test/: TestCompiler.kt
grpc/src/test/kotlin/sron/grpc/type/: NumericTypeTest.kt
grpstd/: CMakeLists.txt  bitarray.c  bitarray.h  graph.c  graph.h
grpstd/src/main/kotlin/sron/grp/collections/: BitArray.kt  BitMatrix.kt
grpstd/src/main/kotlin/sron/grp/graph/: Graph.kt
grpstd/src/test/kotlin/sron/grp/: AAAAAStart.kt
grpstd/src/test/kotlin/sron/grp/graph/: GraphTest.kt
grpstd/tests/: graph.c
jgrapherc/: build.gradle
jgrapherc/src/main/antlr/: Grapher.g4
jgrpc/: build.gradle  pom.xml
jgrpc/src/main/antlr/parser/internal/: Grp.g4
jgrpc/src/main/java/jgrpc/lib/: Compiler.java  GlobalDeclarations.java
jgrpc/src/main/java/jgrpc/main/: App.java  Main.java
jgrpc/src/main/java/main/: GL.java  Main.java
jgrpc/src/test/java/: GLTest.java
std/: CMakeLists.txt  base.h  digraph.cpp  digraph.h  map.h  test.c
std_test/: CMakeLists.txt  main.cpp
(+268 files in other folders)
