CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(std)

INCLUDE_DIRECTORIES(../bitcpp)

ADD_LIBRARY(std STATIC digraph.cpp base.cpp)

TARGET_LINK_LIBRARIES(std bitcpp)

SET_PROPERTY(TARGET std PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET std PROPERTY CXX_STANDARD 11)

ADD_EXECUTABLE(std_test test.cpp)

TARGET_LINK_LIBRARIES(std_test std)

SET_PROPERTY(TARGET std_test PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET std_test PROPERTY CXX_STANDARD 11)

ENABLE_TESTING()

ADD_TEST(std std_test)
