CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(std)

INCLUDE_DIRECTORIES(../bitcpp)

ADD_LIBRARY(std STATIC digraph.cpp base.cpp)
SET_PROPERTY(TARGET std PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET std PROPERTY CXX_STANDARD 11)

TARGET_LINK_LIBRARIES(std bitcpp)

ADD_EXECUTABLE(std_test test.cpp)
SET_PROPERTY(TARGET std_test PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET std_test PROPERTY CXX_STANDARD 11)

TARGET_LINK_LIBRARIES(std_test std)

ENABLE_TESTING()

ADD_TEST(std std_test)
