
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(std_test)

INCLUDE_DIRECTORIES(../bitcpp)
INCLUDE_DIRECTORIES(../std)

ADD_EXECUTABLE(std_test main.cpp)

TARGET_LINK_LIBRARIES(std_test std)

SET_PROPERTY(TARGET std_test PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET std_test PROPERTY CXX_STANDARD 11)
