cmake_minimum_required(VERSION 3.0)
project(grp_test)

include_directories(..)

add_executable(base base.c)
add_executable(bitarray bitarray.c)
add_executable(bitmatrix bitmatrix.c)
add_executable(file file.c)
add_executable(graph graph.c)
add_executable(str str.c)

set_property(TARGET base PROPERTY C_STANDARD 11)
set_property(TARGET bitarray PROPERTY C_STANDARD 11)
set_property(TARGET bitmatrix PROPERTY C_STANDARD 11)
set_property(TARGET file PROPERTY C_STANDARD 11)
set_property(TARGET graph PROPERTY C_STANDARD 11)
set_property(TARGET str PROPERTY C_STANDARD 11)

target_link_libraries(base grp)
target_link_libraries(bitarray grp)
target_link_libraries(bitmatrix grp)
target_link_libraries(file grp)
target_link_libraries(graph grp)
target_link_libraries(str grp)

add_test(base base)
add_test(bitarray bitarray)
add_test(bitmatrix bitmatrix)
add_test(file file)
add_test(graph graph)
add_test(str str)
